--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Assignments/Assignment 1/Assignment1/.vs/Assignment1/v15
